feat: update scarf url (#760)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/.github/workflows/build_docker_for_ai_agents.yml
+++ b/.github/workflows/build_docker_for_ai_agents.yml
@@ -5,6 +5,9 @@ on:
     branches: ["**"]
     tags: ["**"]
     paths-ignore:
+      - "tools/**"
+      - "portal/**"
+      - ".vscode/**"
       - ".devcontainer/**"
       - ".github/**"
       - "!.github/workflows/build-docker.yaml"
@@ -14,6 +17,9 @@ on:
   pull_request:
     branches: ["main"]
     paths-ignore:
+      - "tools/**"
+      - "portal/**"
+      - ".vscode/**"
       - ".devcontainer/**"
       - ".github/**"
       - "!.github/workflows/build-docker.yaml"
