--- a/.github/workflows/tman_full_mac_x64.yml
+++ b/.github/workflows/tman_full_mac_x64.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
+      - "tools/**"
+      - "portal/**"
+      - ".vscode/**"
+      - ".devcontainer/**"
+      - ".github/**"
       - "core/src/ten_manager/**"
       - "core/src/ten_rust/**"
       - "ai_agents/**"
