--- a/ai_agents/docker-compose.yml
+++ b/ai_agents/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   ten_agent_dev:
-    image: ghcr.io/ten-framework/ten_agent_build:0.6.1
+    image: docker.theten.ai/ten-framework/ten_agent_build:0.6.1
+    #image: ghcr.io/ten-framework/ten_agent_build:0.6.1
     container_name: ten_agent_dev
     platform: linux/amd64
     tty: true
