--- a/.github/workflows/tman_full_mac_arm64.yml
+++ b/.github/workflows/tman_full_mac_arm64.yml
@@ -16,7 +16,8 @@ on:
       - "ai_agents/**"
 
 permissions:
-  contents: read
+  contents: write
+  discussions: write
   security-events: write
 
 concurrency:
