feat: compatible connection (#762)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/.github/workflows/ai_agents.yaml
+++ b/.github/workflows/ai_agents.yaml
@@ -4,6 +4,12 @@ on:
   pull_request:
     branches: ["main"]
     paths-ignore:
+      - "core/**"
+      - "portal/**"
+      - "tools/**"
+      - "packages/**"
+      - "build/**"
+      - "third_party/**"
       - ".devcontainer/**"
       - ".github/**"
       - "!.github/workflows/agents.yaml"
