--- a/.github/workflows/build_docker_for_ai_agents.yml
+++ b/.github/workflows/build_docker_for_ai_agents.yml
@@ -5,8 +5,12 @@ on:
     branches: ["**"]
     tags: ["**"]
     paths-ignore:
-      - "tools/**"
+      - "core/**"
       - "portal/**"
+      - "tools/**"
+      - "packages/**"
+      - "build/**"
+      - "third_party/**"
       - ".vscode/**"
       - ".devcontainer/**"
       - ".github/**"
@@ -17,8 +21,12 @@ on:
   pull_request:
     branches: ["main"]
     paths-ignore:
-      - "tools/**"
+      - "core/**"
       - "portal/**"
+      - "tools/**"
+      - "packages/**"
+      - "build/**"
+      - "third_party/**"
       - ".vscode/**"
       - ".devcontainer/**"
       - ".github/**"
