chore: update package-lock.json and go.mod for dependency versions and module name change (#763)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,5 +108,8 @@
     "**/node_modules/*/**": true,
     "**/out/*/**": true,
     "**/third_party/*/**": true
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
   }
 }
