--- a/core/src/ten_manager/Cargo.toml
+++ b/core/src/ten_manager/Cargo.toml
@@ -59,6 +59,7 @@ tokio = { version = "1", features = [
   "sync",
   "time",
   "process",
+  "macros",
 ] }
 tokio-macros = "2.5.0"
 url = { version = "2.5" }
