feat: support qwen3 (#773)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/.github/workflows/tman_full_linux_x64.yml
+++ b/.github/workflows/tman_full_linux_x64.yml
@@ -13,6 +13,7 @@ on:
       - ".github/**"
       - "core/src/ten_manager/**"
       - "core/src/ten_rust/**"
+    paths-ignore:
       - "ai_agents/**"
 
 permissions:
