--- a/.github/workflows/tman_full_mac_arm64.yml
+++ b/.github/workflows/tman_full_mac_arm64.yml
@@ -13,6 +13,7 @@ on:
       - ".github/**"
       - "core/src/ten_manager/**"
       - "core/src/ten_rust/**"
+    paths-ignore:
       - "ai_agents/**"
 
 permissions:
