refactor: remove additionalProperties from JSON schemas and update integration tests (#783)

--- a/tests/ten_runtime/integration/cpp/BUILD.gn
+++ b/tests/ten_runtime/integration/cpp/BUILD.gn
@@ -15,6 +15,7 @@ group("cpp") {
     "hello_world",
     "large_result",
     "long_running",
+    "metadata_additional_field",
     "restful",
   ]
 
