chore: update dependencies and improve log file watcher functionality (#803)

--- a/core/src/ten_manager/Cargo.toml
+++ b/core/src/ten_manager/Cargo.toml
@@ -70,6 +70,8 @@ zip = { version = "2.2", default-features = false, features = [
   "time",
 ] }
 crossbeam-channel = "0.5.15"
+libc = "0.2.172"
+winapi = { version = "0.3.9", features = ["fileapi"] }
 
 [target."cfg(unix)".dependencies]
 mimalloc = "0.1"
