feat: support stepfun realtime api (#807)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/ai_agents/agents/examples/default/manifest.json
+++ b/ai_agents/agents/examples/default/manifest.json
@@ -167,6 +167,11 @@
       "type": "extension",
       "name": "dubverse_tts",
       "version": "=0.1.0"
+    },
+    {
+      "type": "extension",
+      "name": "stepfun_v2v_python",
+      "version": "=0.1.0"
     }
   ]
 }
