chore: update workspace configuration in devcontainer.json to use /app directory

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,8 @@
       ]
     }
   },
-  "workspaceMount": "source=${localWorkspaceFolder},target=/ten_framework,type=bind",
-  "workspaceFolder": "/ten_framework",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind",
+  "workspaceFolder": "/app",
   "forwardPorts": [
     3000,
     8080,
