--- a/core/src/ten_manager/Cargo.toml
+++ b/core/src/ten_manager/Cargo.toml
@@ -7,6 +7,11 @@ name = "ten_manager"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["jemalloc"]
+mimalloc = ["dep:mimalloc"]
+jemalloc = ["dep:jemallocator"]
+
 [dependencies]
 ten_rust = { path = "../ten_rust", version = "0.1.0", default-features = false, features = [
 ] }
@@ -74,7 +79,8 @@ libc = "0.2.172"
 winapi = { version = "0.3.9", features = ["fileapi"] }
 
 [target."cfg(unix)".dependencies]
-mimalloc = "0.1"
+mimalloc = { version = "0.1", optional = true }
+jemallocator = { version = "0.5", optional = true }
 
 [target."cfg(unix)".dependencies.clingo]
 version = "0.8"
