feat: add memory statistics printing functionality with optional jemalloc support (#852)

--- a/core/src/ten_manager/Cargo.toml
+++ b/core/src/ten_manager/Cargo.toml
@@ -8,9 +8,9 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["jemalloc"]
+default = ["mimalloc"]
 mimalloc = ["dep:mimalloc"]
-jemalloc = ["dep:jemallocator"]
+jemalloc = ["dep:jemallocator", "dep:jemalloc-sys"]
 
 [dependencies]
 ten_rust = { path = "../ten_rust", version = "0.1.0", default-features = false, features = [
@@ -80,7 +80,8 @@ winapi = { version = "0.3.9", features = ["fileapi"] }
 
 [target."cfg(unix)".dependencies]
 mimalloc = { version = "0.1", optional = true }
-jemallocator = { version = "0.5", optional = true }
+jemallocator = { version = "0.5", optional = true, features = ["stats"] }
+jemalloc-sys = { version = "0.5", optional = true, features = ["stats"] }
 
 [target."cfg(unix)".dependencies.clingo]
 version = "0.8"
