--- a/core/src/ten_manager/designer_frontend/package.json
+++ b/core/src/ten_manager/designer_frontend/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query-devtools": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/react-window": "^1.8.8",
     "@xterm/addon-attach": "^0.11.0",
@@ -73,6 +75,7 @@
     "@eslint/js": "^9.26.0",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/dagre": "^0.7.52",
     "@types/node": "^22.15.14",
     "@types/react": "^18.3.21",
