feat: install extra tools in dockerfile and fix workflow ignores (#907)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -10,7 +10,7 @@ on:
       - ".vscode/**"
       - ".devcontainer/**"
       - ".github/**"
-      - "!.github/workflows/build_win.yml"
+      - "!.github/workflows/win.yml"
       - "core/src/ten_manager/designer_frontend/**"
       - "**.md"
       - "ai_agents/**"
