--- a/.github/workflows/tman_full_mac_x64.yml
+++ b/.github/workflows/tman_full_mac_x64.yml
@@ -122,11 +122,15 @@ jobs:
             out/mac/x64/tman-mac-${{ matrix.build_type }}-x64.zip
 
       - name: Install Playwright Browsers
+        env:
+          PLAYWRIGHT_RUNTIME: "macos"
         run: |
           cd core/src/ten_manager/designer_frontend
           npx playwright install --with-deps
 
       - name: Run Playwright tests
+        env:
+          PLAYWRIGHT_RUNTIME: "macos"
         run: |
           # Start the tman designer backend
           cd ${GITHUB_WORKSPACE}/out/mac/x64/ten_manager/bin
