--- a/core/src/ten_manager/designer_frontend/package.json
+++ b/core/src/ten_manager/designer_frontend/package.json
@@ -8,29 +8,33 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:e2e": "playwright test"
+    "test:prepare": "playwright install",
+    "test:e2e": "playwright test",
+    "test:show-report": "playwright show-report"
   },
   "dependencies": {
     "@autoform/react": "^3.1.0",
     "@autoform/zod": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@monaco-editor/react": "^4.7.0",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-context-menu": "^2.2.14",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-switch": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@radix-ui/react-toggle": "^1.1.8",
-    "@radix-ui/react-tooltip": "^1.2.6",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
@@ -40,10 +44,14 @@
     "@xterm/addon-unicode11": "^0.8.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
-    "@xyflow/react": "^12.6.0",
+    "@xyflow/react": "^12.6.4",
+    "agora-rtc-react": "2.0.0",
+    "agora-token": "^2.0.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto-browserify": "^3.12.1",
     "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "i18next": "^24.2.3",
@@ -51,14 +59,15 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.511.0",
     "monaco-editor": "^0.52.2",
-    "motion": "^12.10.0",
+    "motion": "^12.15.0",
     "next-themes": "^0.4.6",
-    "pino": "^9.6.0",
+    "pino": "^9.7.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.56.2",
-    "react-i18next": "^15.5.1",
+    "react-hook-form": "^7.57.0",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "react-virtualized-auto-sizer": "^1.0.26",
@@ -66,34 +75,41 @@
     "recharts": "^2.15.3",
     "sonner": "^1.7.4",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.20",
-    "zustand": "^5.0.4"
+    "trulience-sdk": "https://trulience.com/release/prod/latest/trulience-sdk.tar.gz",
+    "zod": "^3.25.48",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
+    "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.52.0",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/dagre": "^0.7.52",
-    "@types/node": "^22.15.14",
-    "@types/react": "^18.3.21",
+    "@types/node": "^22.15.29",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitejs/plugin-react-swc": "^3.10.0",
     "esbuild": "^0.24.2",
-    "eslint": "^9.26.0",
+    "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "pino-pretty": "^13.0.0",
     "playwright": "^1.52.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.5",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
     "typescript": "~5.7.3",
-    "typescript-eslint": "^8.32.0",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.33.0",
+    "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.23.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "0.24.2"
+    }
   }
 }
