chore: update CODEOWNERS to use wildcard for ai_agents and docs directories

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @Halajohn
-ai_agents/* @plutoless
-docs/* @plutoless
-README.md @plutoless
+*             @Halajohn
+ai_agents/**  @plutoless
+docs/**       @plutoless
+README.md     @plutoless
