chore: update CODEOWNERS to assign Halajohn as co-owner for ai_agents, docs, and README.md

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 *             @Halajohn
-ai_agents/**  @plutoless
-docs/**       @plutoless
-README.md     @plutoless
+ai_agents/**  @Halajohn @plutoless
+docs/**       @Halajohn @plutoless
+README.md     @Halajohn @plutoless
