fix: refine default extension  template (#938)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/core/src/ten_runtime/BUILD_release.gn
+++ b/core/src/ten_runtime/BUILD_release.gn
@@ -23,8 +23,16 @@ config("ten_runtime_common_libs") {
 config("ten_runtime_common_config") {
   configs = [ ":ten_runtime_common_libs" ]
 
-  include_dirs = [ "//ten_packages/system/ten_runtime/include" ]
-  lib_dirs = [ "//ten_packages/system/ten_runtime/lib" ]
+  # These paths only take effect during compilation and will not modify or write
+  # to the shared library search path during runtime.
+  include_dirs = [
+    "//ten_packages/system/ten_runtime/include",
+    "//.ten/app/ten_packages/system/ten_runtime/include",
+  ]
+  lib_dirs = [
+    "//ten_packages/system/ten_runtime/lib",
+    "//.ten/app/ten_packages/system/ten_runtime/lib",
+  ]
 }
 
 config("config_for_app") {
