--- a/packages/core_extensions/default_extension_nodejs/package.json
+++ b/packages/core_extensions/default_extension_nodejs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ten-default-extension",
+  "name": "default_extension_nodejs",
   "version": "1.0.0",
   "type": "module",
   "main": "./build/index.js",
