--- a/tests/ten_runtime/integration/python/BUILD.gn
+++ b/tests/ten_runtime/integration/python/BUILD.gn
@@ -52,6 +52,8 @@ group("python") {
         "send_recv_image_python",
         "send_recv_pcm_python",
         "standalone_ollama_python",
+        "standalone_test_async_tmpl_python",
+        "standalone_test_tmpl_python",
         "two_async_exts_one_group_python",
         "two_async_exts_python",
         "websocket_server_python",
