--- a/packages/core_extensions/default_extension_python/manifest.json
+++ b/packages/core_extensions/default_extension_python/manifest.json
@@ -23,7 +23,8 @@
       "tests/**.py",
       "tests/**.tent",
       "tests/bin/*",
-      "requirements.txt"
+      "requirements.txt",
+      ".vscode/**"
     ]
   },
   "api": {},
