fix: strengthen memory leak check machanisms for language bindings (#953)

--- a/tests/ten_runtime/integration/python/aio_http_server_python/BUILD.gn
+++ b/tests/ten_runtime/integration/python/aio_http_server_python/BUILD.gn
@@ -31,6 +31,7 @@ ten_package_test_prepare_auxiliary_resources(
     "aio_http_server_python_test_files") {
   resources = [
     "__init__.py",
+    "lsan.suppressions",
     "test_case.py",
   ]
 
