--- a/tests/ten_runtime/integration/python/websocket_server_python/BUILD.gn
+++ b/tests/ten_runtime/integration/python/websocket_server_python/BUILD.gn
@@ -30,6 +30,7 @@ ten_package_test_prepare_auxiliary_resources(
     "websocket_server_python_test_files") {
   resources = [
     "__init__.py",
+    "lsan.suppressions",
     "test_case.py",
   ]
 
