fix: strengthen memory leak check machanisms for language bindings (#957)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/tests/ten_runtime/integration/go/BUILD.gn
+++ b/tests/ten_runtime/integration/go/BUILD.gn
@@ -46,5 +46,9 @@ group("go") {
       # only meaningful in a POSIX system.
       deps += [ "exit_signal_go" ]
     }
+
+    if (is_debug) {
+      deps += [ "leak_check_go" ]
+    }
   }
 }
