--- a/tests/ten_runtime/integration/nodejs/BUILD.gn
+++ b/tests/ten_runtime/integration/nodejs/BUILD.gn
@@ -34,4 +34,8 @@ group("nodejs") {
   if (ten_enable_go_binding && ten_enable_python_binding) {
     deps += [ "go_app_preload_all_addons_nodejs" ]
   }
+
+  if (is_debug) {
+    deps += [ "leak_check_nodejs" ]
+  }
 }
