feat: support dev_dependencies (#958)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/packages/core_extensions/default_extension_cpp/manifest.json
+++ b/packages/core_extensions/default_extension_cpp/manifest.json
@@ -11,7 +11,9 @@
       "type": "system",
       "name": "ten_runtime",
       "version": "0.10.12"
-    },
+    }
+  ],
+  "dev_dependencies": [
     {
       "type": "system",
       "name": "googletest",
