--- a/.github/workflows/linux_ubuntu2204.yml
+++ b/.github/workflows/linux_ubuntu2204.yml
@@ -162,11 +162,14 @@ jobs:
             ten_packages/system/ten_runtime \
             ten_packages/system/ten_runtime_go \
             ten_packages/system/ten_runtime_python \
+            ten_packages/system/ten_runtime_nodejs \
             ten_packages/extension/default_extension_cpp \
             ten_packages/extension/default_extension_go \
             ten_packages/extension/default_extension_python \
             ten_packages/extension/default_async_extension_python \
-            ten_packages/addon_loader/python_addon_loader
+            ten_packages/extension/default_extension_nodejs \
+            ten_packages/addon_loader/python_addon_loader \
+            ten_packages/addon_loader/nodejs_addon_loader
 
           df -h .
 
@@ -198,11 +201,14 @@ jobs:
             "ten_packages/system/ten_runtime"
             "ten_packages/system/ten_runtime_go"
             "ten_packages/system/ten_runtime_python"
+            "ten_packages/system/ten_runtime_nodejs"
             "ten_packages/extension/default_extension_cpp"
             "ten_packages/extension/default_extension_go"
             "ten_packages/extension/default_extension_python"
             "ten_packages/extension/default_async_extension_python"
+            "ten_packages/extension/default_extension_nodejs"
             "ten_packages/addon_loader/python_addon_loader"
+            "ten_packages/addon_loader/nodejs_addon_loader"
           )
 
           for item in "${ARRAY[@]}"; do
@@ -230,11 +236,14 @@ jobs:
             "ten_packages/system/ten_runtime"
             "ten_packages/system/ten_runtime_go"
             "ten_packages/system/ten_runtime_python"
+            "ten_packages/system/ten_runtime_nodejs"
             "ten_packages/extension/default_extension_cpp"
             "ten_packages/extension/default_extension_go"
             "ten_packages/extension/default_extension_python"
             "ten_packages/extension/default_async_extension_python"
+            "ten_packages/extension/default_extension_nodejs"
             "ten_packages/addon_loader/python_addon_loader"
+            "ten_packages/addon_loader/nodejs_addon_loader"
           )
 
           for item in "${ARRAY[@]}"; do
