--- a/tests/ten_runtime/integration/cpp/BUILD.gn
+++ b/tests/ten_runtime/integration/cpp/BUILD.gn
@@ -13,6 +13,7 @@ group("cpp") {
     "graph_env_var_2",
     "graph_env_var_3",
     "hello_world",
+    "import_graph",
     "large_result",
     "long_running",
     "metadata_additional_field",
