fix: remove assert during resolving properties (#986)
Co-authored-by: Hu Yueh-Wei <wei.hu.tw@gmail.com>

--- a/tests/ten_runtime/integration/cpp/BUILD.gn
+++ b/tests/ten_runtime/integration/cpp/BUILD.gn
@@ -12,6 +12,7 @@ group("cpp") {
     "graph_env_var_1",
     "graph_env_var_2",
     "graph_env_var_3",
+    "graph_env_var_4",
     "hello_world",
     "import_graph",
     "large_result",
