--- a/packages/core_addon_loaders/nodejs_addon_loader/manifest.json
+++ b/packages/core_addon_loaders/nodejs_addon_loader/manifest.json
@@ -2,6 +2,13 @@
   "type": "addon_loader",
   "name": "nodejs_addon_loader",
   "version": "0.10.15",
+  "description": {
+    "en-US": "TEN Framework addon loader for Node.js runtime support",
+    "zh-CN": "TEN Framework 的 Node.js 运行时支持插件加载器",
+    "zh-TW": "TEN Framework 的 Node.js 執行時期支援外掛載入器",
+    "ja-JP": "Node.jsランタイムサポート用のTEN Frameworkアドオンローダー",
+    "ko-KR": "Node.js 런타임 지원을 위한 TEN Framework 애드온 로더"
+  },
   "dependencies": [
     {
       "type": "system",
