--- a/packages/core_apps/default_app_nodejs/manifest.json
+++ b/packages/core_apps/default_app_nodejs/manifest.json
@@ -2,6 +2,13 @@
   "type": "app",
   "name": "default_app_nodejs",
   "version": "0.10.15",
+  "description": {
+    "en-US": "Default TEN Framework application template written in Node.js",
+    "zh-CN": "使用 Node.js 语言编写的默认 TEN Framework 应用模板",
+    "zh-TW": "使用 Node.js 語言編寫的預設 TEN Framework 應用程式模板",
+    "ja-JP": "Node.jsで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
+    "ko-KR": "Node.js로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+  },
   "tags": [
     "nodejs",
     "template"
