--- a/packages/core_apps/default_app_python/manifest.json
+++ b/packages/core_apps/default_app_python/manifest.json
@@ -2,6 +2,13 @@
   "type": "app",
   "name": "default_app_python",
   "version": "0.10.15",
+  "description": {
+    "en-US": "Default TEN Framework application template written in Python",
+    "zh-CN": "使用 Python 语言编写的默认 TEN Framework 应用模板",
+    "zh-TW": "使用 Python 語言編寫的預設 TEN Framework 應用程式模板",
+    "ja-JP": "Pythonで書かれたデフォルトのTEN Frameworkアプリケーションテンプレート",
+    "ko-KR": "Python으로 작성된 기본 TEN Framework 애플리케이션 템플릿"
+  },
   "tags": [
     "python",
     "template"
