--- a/packages/core_extensions/default_async_extension_python/manifest.json
+++ b/packages/core_extensions/default_async_extension_python/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "default_async_extension_python",
   "version": "0.10.15",
+  "description": {
+    "en-US": "Default TEN Framework asynchronous extension template written in Python",
+    "zh-CN": "使用 Python 语言编写的默认 TEN Framework 异步扩展模板",
+    "zh-TW": "使用 Python 語言編寫的預設 TEN Framework 異步擴充模板",
+    "ja-JP": "Pythonで書かれたデフォルトのTEN Framework非同期拡張テンプレート",
+    "ko-KR": "Python으로 작성된 기본 TEN Framework 비동기 확장 템플릿"
+  },
   "tags": [
     "python",
     "template"
