--- a/packages/core_extensions/default_extension_cpp/manifest.json
+++ b/packages/core_extensions/default_extension_cpp/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "default_extension_cpp",
   "version": "0.10.15",
+  "description": {
+    "en-US": "Default TEN Framework extension template written in C++",
+    "zh-CN": "使用 C++ 语言编写的默认 TEN Framework 扩展模板",
+    "zh-TW": "使用 C++ 語言編寫的預設 TEN Framework 擴充模板",
+    "ja-JP": "C++で書かれたデフォルトのTEN Framework拡張テンプレート",
+    "ko-KR": "C++로 작성된 기본 TEN Framework 확장 템플릿"
+  },
   "tags": [
     "cpp",
     "template"
