--- a/packages/example_extensions/ollama_python/manifest.json
+++ b/packages/example_extensions/ollama_python/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "ollama_python",
   "version": "0.10.15",
+  "description": {
+    "en-US": "Ollama integration extension example written in Python for TEN Framework",
+    "zh-CN": "使用 Python 语言编写的 TEN Framework Ollama 集成扩展示例",
+    "zh-TW": "使用 Python 語言編寫的 TEN Framework Ollama 整合擴充範例",
+    "ja-JP": "TEN Framework用のPythonで書かれたOllama統合拡張サンプル",
+    "ko-KR": "TEN Framework용 Python으로 작성된 Ollama 통합 확장 예제"
+  },
   "tags": [
     "python"
   ],
