--- a/packages/example_extensions/websocket_server_python/manifest.json
+++ b/packages/example_extensions/websocket_server_python/manifest.json
@@ -2,6 +2,13 @@
   "type": "extension",
   "name": "websocket_server_python",
   "version": "0.10.15",
+  "description": {
+    "en-US": "WebSocket server extension example written in Python for TEN Framework",
+    "zh-CN": "使用 Python 语言编写的 TEN Framework WebSocket 服务器扩展示例",
+    "zh-TW": "使用 Python 語言編寫的 TEN Framework WebSocket 伺服器擴充範例",
+    "ja-JP": "TEN Framework用のPythonで書かれたWebSocketサーバー拡張サンプル",
+    "ko-KR": "TEN Framework용 Python으로 작성된 WebSocket 서버 확장 예제"
+  },
   "tags": [
     "python"
   ],
