--- a/core/src/ten_rust/Cargo.toml
+++ b/core/src/ten_rust/Cargo.toml
@@ -45,7 +45,12 @@ reqwest = { version = "0.12", default-features = false, features = [
   "json",
   "rustls-tls",
 ] }
-tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
+tokio = { version = "1.0", features = [
+  "rt",
+  "rt-multi-thread",
+  "test-util",
+  "macros",
+] }
 
 [build-dependencies]
 bindgen = { version = "0.70", optional = true }
